# Development-Template-2020-2021

./: .travis.yml  CMakeLists.txt  README.md  islands.h  main.cpp  tree.cpp  tree.h
StackLib/: CMakeLists.txt  Stack.h
TextLib/: CMakeLists.txt  Text.h  TextNode.cpp  TextNode.h
function_lib/: CMakeLists.txt  add.h  roman.cpp  roman.h
gtest/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_Text.cpp  test_add.cpp  test_main.cpp  test_roman.cpp
